fix align

--- a/css/start.css
+++ b/css/start.css
@@ -11,15 +11,16 @@ main {
 }
 
 .algebra {
+  margin-left: 4%;
   width: 60%;
 }
 
 .geometry {
-  width: 40%;
+  width: fit-content;
+  padding-left: 5%;
 }
 
 .algebra, .geometry {
-  text-align: center;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 32px;
@@ -30,25 +31,29 @@ main {
 .themes {
   text-align: left;
   margin-top: 50px;
-  display: flex;
   font-size: 22px;
   font-family: 'Nanum Gothic', sans-serif;
 }
 
+.algebra .themes {
+  display: flex;
+}
+
 .algebra p, .geometry p {
-  padding-left: 15px;
+  /* padding-left: 15px; */
+  transform: translateX(15px);
   font-size: 16px;
   font-family: 'Roboto Mono', monospace;
   cursor: pointer;
   width: fit-content;
+  transition: padding .2s;
 }
 
 .algebra p:hover, .geometry p:hover {
   background-color: chocolate;
   font-weight: bold;
-  padding-left: 30px;
+  padding-left: 25px;
   text-decoration: underline;
-  transition: .2s;
 }
 
 .integers p:first-child, .fractionals p:first-child {
@@ -56,6 +61,7 @@ main {
 }
 
 .algebra::before {
+  padding-left: 32.5%;
   content: 'алгебра';
 }
 
@@ -79,8 +85,8 @@ main {
   margin-left: 20px;
 }
 
-.integers::before, .fractionals::before {
-  border-top: 6px solid darkblue;
+.integers::before, .fractionals::before, .intro::before {
+  border-top: 4px solid darkblue;
   padding: 5px;
 }
 
@@ -90,6 +96,10 @@ main {
 
 .fractionals::before {
   content: 'дробные числа';
+}
+
+.intro::before {
+  content: 'введение';
 }
 
 a {
